--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^29.2.2",
     "cloudinary": "^1.32.0",
+    "dotenv": "^16.0.3",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "setimmediate": "^1.0.5",
